# webinar-cicov

./: .gitignore  CMakeLists.txt  MISRA C 2023 Quality Gate.properties  cpputest_sensorUtil.xml  cspybat_sim.sh  dtp.settings  main.cxx  mainTestSuite.cxx  sensorUtil.cxx  sensorUtilTestSuite.cxx  stm32f407xG.icf
.devcontainer/: devcontainer.json
.github/workflows/: quality-gate-master.yml  quality-gate.yml
CppUTest/src/CppUTest/: CMakeLists.txt
cmake/: cpptest-coverage.cmake  iar-toolchain.cmake
include/: main.hxx  sensorUtil.hxx
